Quick fix for unecessary scrollbar

--- a/slides/app/components/Preview/Preview.scss
+++ b/slides/app/components/Preview/Preview.scss
@@ -19,7 +19,7 @@
   top: $previewbar-height;
   left: 0;
   right: 0;
-  bottom: 0;
+  bottom: 2px;
 }
 .previewAlert {
   position: absolute;
